--- a/Java-script-training/index.html
+++ b/Java-script-training/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
 
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8" />
+  <title>My Website</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 
-    <h1>Hello</h1>
+<body>
+  <h1 id="title">Hello</h1>
 
-    <input type="checkbox">
+  <input type="checkbox" />
 
-    <button style=":active color:red;">Click Me</button>
+  <button class="btn" style=":active color:red;">Click Me</button>
 
-    <ul>
-      <li class="list">
-        <a href="https://www.google.com">Google</a>
-      </li>
-      <li class="list">Second</li>
-      <li class="list">Third</li>
-    </ul>
-
-  </body>
+  <ul id="list">
+    <li class="list"><a href="https://www.google.com">Google</a></li>  
+    <li class="list">Second</li>
+    <li class="list">Third</li>
+  </ul>
+</body>
+<footer>
+  <script src="index.js"></script>
+</footer>
 
 </html>
